fixed bug row-gap

--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -4,13 +4,13 @@
       flex-wrap: wrap;
       justify-content: center;
       column-gap: 30px;
-      row-gap: 30px;
     }
   }
   .contact{
     margin: 0;
   }
   .map{
+    margin-top: 30px;
     &__title{
       margin-bottom: 20px;
       text-align: center;
@@ -144,7 +144,9 @@
     flex-wrap: wrap;
     justify-content: center;
     column-gap: 30px;
-    row-gap: 30px;
+    &__item{
+      margin-bottom: 30px;
+    }
   }
   .about-content{
     justify-content: flex-start;
@@ -183,13 +185,18 @@
     flex-wrap: wrap;
     justify-content: center;
     column-gap: 15px;
-    row-gap: 15px;
+    &__item{
+      margin-bottom: 15px;
+    }
   }
   .results{
+    margin-bottom: 40px;
     &__inner{
       justify-content: space-around;
       flex-wrap: wrap;
-      row-gap: 40px;
+    }
+    &__item{
+      margin-bottom: 40px;
     }
     &__item-title{
       margin-bottom: 15px;
@@ -261,9 +268,6 @@
       margin-left: 0;
     }
   }
-  .info{
-    row-gap: 10px;
-  }
   .about-content{
     padding-top: 50px;
   }
@@ -286,7 +290,7 @@
   }
   .results{
     padding-top: 50px;
-    margin-bottom: 60px;
+    margin-bottom: 20px;
   }
   .title{
     font-size: 27px;
